# edgespark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements-rocm.txt
.github/workflows/: ci.yml
bench/: __init__.py  harness.py  plots.py  simulate.py  svgplot.py  timings.md
bench/baselines/: __init__.py  llama_cpp.py  vanilla.py
configs/: bench.yaml  drafter_qwen3_4b.yaml  policy.yaml  quant_int8.yaml  quant_nf4.yaml
data/: __init__.py  build_cache.py  generate_pairs.py  prompts.py
demo/: README.md  __init__.py  hardware_engine.py  server.py
demo/dashboard/: app.js  index.html  style.css
docs/: ARCHITECTURE.md  DEVLOG.md  RESULTS.md  TECHNICAL_REPORT.md
edgespark/: __init__.py  verifier.py
edgespark/calibration/: __init__.py  metrics.py  recalibrate.py
edgespark/drafter/: __init__.py  backbone.py  confidence_head.py  markov_head.py  model.py
edgespark/loop/: __init__.py  acceptance.py  generate.py  reference.py
edgespark/policy/: __init__.py  verify_length.py
edgespark/quantize/: __init__.py  int8.py  nf4.py
edgespark/utils/: __init__.py  config.py  metrics_log.py  timing.py  toy.py  vram.py
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json
graphify-out/cache/: stat-index.json
paper/: README.md  edgespark.tex  refs.bib
runs/calibration/: calibration.json
runs/hardware/: NOTES.md  baselines.json  env.txt  vram.json
runs/reference/: summary.json
scripts/: check_env.py  make_figures.py  run_benchmark.py  run_calibration_study.py
tests/: test_calibration.py  test_exactness.py  test_harness.py  test_policy.py  test_quantize.py
train/: __init__.py  distill.py  losses.py  train_drafter.py
