[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edgespark"
version = "0.6.0"
description = "Quantized speculative decoding for a single consumer AMD GPU, with a confidence-head calibration study."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Parusann" }]
keywords = ["speculative-decoding", "quantization", "rocm", "calibration", "llm-inference"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# The correctness-critical core (acceptance, calibration, policy) needs only these.
dependencies = ["numpy>=1.24", "pyyaml>=6.0"]

[project.optional-dependencies]
# The neural stack for the RX 7900 XTX. Install torch from the ROCm index first;
# see requirements-rocm.txt.
rocm = [
    "torch>=2.9",
    "transformers>=5.10",
    "bitsandbytes>=0.43",
    "safetensors",
    "sentencepiece",
    "datasets",
    "tensorboard",
]
dev = ["pytest>=8", "matplotlib>=3.7", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/Parusann/edgespark"
Documentation = "https://github.com/Parusann/edgespark/tree/main/docs"

[tool.setuptools.packages.find]
include = ["edgespark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines are handled by the formatter, not the linter

[tool.ruff.lint.per-file-ignores]
# torch-gated tests must call pytest.importorskip before importing torch modules.
"tests/*" = ["E402"]
# entry scripts prepend the repo root to sys.path before importing the package,
# so bare `python scripts/x.py` works from a fresh clone.
"scripts/*" = ["E402"]
"demo/server.py" = ["E402"]
